# TextAdventure

./: .gitignore  CMakeLists.txt  changelog.txt  fogpi  run.sh
assets/: ANSI_COLORS.txt  level_2.map  level_3-C.map  level_3.map
src/: Dice.cpp  Dice.hpp  Room.cpp  Room.hpp  main.cpp
src/Entities/: Butcher.cpp  Butcher.hpp  Entity.hpp  Hunter.cpp  Hunter.hpp  Player.cpp  Player.hpp
